syntax = "proto3";

package drivers;

service DriversService {
  rpc GetAllDrivers (GetAllDriversRequest) returns (GetAllDriversResponse);
  rpc GetDriverById (DriverByIdRequest) returns (DriverResponse);
  rpc CreateDriver (CreateDriverRequest) returns (DriverResponse);
  rpc UpdateDriver (UpdateDriverRequest) returns (DriverResponse);
  rpc DeleteDriver (DriverByIdRequest) returns (DriverResponse);
}

// ======== Requests ========

message GetAllDriversRequest {
  int32 page = 1;
  int32 limit = 2;
}

message DriverByIdRequest {
  string id = 1;
}

message CreateDriverRequest {
  string name = 1;           // Desde Auth Service
  string userId = 2;         // Desde Auth Service
}

message UpdateDriverRequest {
  string id = 1;
  string name = 2;
  string license = 3;
  string email = 4;
  string userId = 5;
  string phone = 6;
  bool isAvailable = 7;
  string birthDate = 8;      // ISO date string
}

// ======== Responses ========

message DriverResponse {
  string id = 1;
  string name = 2;
  string license = 3;
  string email = 4;
  string userId = 5;
  string phone = 6;
  bool isAvailable = 7;
  string birthDate = 8;
  string registrationDate = 9;
  string updatedAt = 10;
  string message = 11;
}

message GetAllDriversResponse {
  repeated DriverResponse drivers = 1;
  int32 total = 2;
  int32 page = 3;
  int32 totalPages = 4;
}
